--- a/animConverter/animConverter.vcxproj.filters
+++ b/animConverter/animConverter.vcxproj.filters
@@ -1,34 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <Filter Include="classes">
-      <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
-      <Extensions>h;hh;hpp;hxx;hm;inl;inc;xsd</Extensions>
-    </Filter>
-  </ItemGroup>
-  <ItemGroup>
     <ClCompile Include="main.cpp" />
-    <ClCompile Include="classes\Animation.cpp">
-      <Filter>classes</Filter>
-    </ClCompile>
-    <ClCompile Include="classes\Frame.cpp">
-      <Filter>classes</Filter>
-    </ClCompile>
-    <ClCompile Include="classes\Utils.cpp">
-      <Filter>classes</Filter>
-    </ClCompile>
-    <ClCompile Include="stdafx.cpp" />
+    <ClCompile Include="Animation.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="classes\Animation.h">
-      <Filter>classes</Filter>
-    </ClInclude>
-    <ClInclude Include="classes\Frame.h">
-      <Filter>classes</Filter>
-    </ClInclude>
-    <ClInclude Include="classes\Utils.h">
-      <Filter>classes</Filter>
-    </ClInclude>
-    <ClInclude Include="stdafx.h" />
+    <ClInclude Include="Animation.h" />
   </ItemGroup>
 </Project>
